Add config for seasonal temperatures