@@ -1,6 +1,7 @@
 package dev.momostudios.coldsweat.config;
 
 import net.minecraftforge.common.ForgeConfigSpec;
+import net.minecraftforge.fml.ModList;
 import net.minecraftforge.fml.ModLoadingContext;
 import net.minecraftforge.fml.config.ModConfig;
 import net.minecraftforge.fml.loading.FMLPaths;
@@ -20,6 +21,11 @@ public class WorldSettingsConfig
     public static final ForgeConfigSpec.ConfigValue<List<? extends List<?>>> dimensionOffsets;
     public static final ForgeConfigSpec.ConfigValue<List<? extends List<?>>> dimensionTemps;
 
+    public static ForgeConfigSpec.ConfigValue<List<? extends Number>> summerTemps = null;
+    public static ForgeConfigSpec.ConfigValue<List<? extends Number>> autumnTemps = null;
+    public static ForgeConfigSpec.ConfigValue<List<? extends Number>> winterTemps = null;
+    public static ForgeConfigSpec.ConfigValue<List<? extends Number>> springTemps = null;
+
     static final WorldSettingsConfig INSTANCE = new WorldSettingsConfig();
 
     static
@@ -27,45 +33,43 @@ public class WorldSettingsConfig
         /*
          Dimensions
          */
-        BUILDER.comment("Notation: [[\"dimension1\", \"temperature1\"], [\"dimension2\", \"temperature2\"]... etc]",
-            "Common dimension IDs: minecraft:overworld, minecraft:the_nether, minecraft:the_end",
-            "Note: all temperatures are in Minecraft units",
-            "°F to MC = (x - 32) / 42",
-            "°C to MC = x / 23.3")
-            .push("Dimensions");
+        BUILDER.comment("Format: [[\"dimension-1\", temperature-1], [\"dimension-2\", temperature-2]... etc]",
+                        "Common dimension IDs: minecraft:overworld, minecraft:the_nether, minecraft:the_end",
+                        "Note: all temperatures are in Minecraft units",
+                        "°F to MC = (x - 32) / 42",
+                        "°C to MC = x / 23.3")
+               .push("Dimensions");
 
-        BUILDER.push("DimensionTemperatureOffset");
         dimensionOffsets = BUILDER
+                .comment("Applies an offset to the world's temperature across an entire dimension")
             .defineList("Dimension Temperature Offsets", List.of(
                     List.of("minecraft:the_nether", 1.0),
                     List.of("minecraft:the_end", -0.1)
             ), it -> it instanceof List && ((List<?>) it).get(0) instanceof String && ((List<?>) it).get(1) instanceof Number);
-        BUILDER.pop();
 
-        BUILDER.push("DimensionTemperatures");
         dimensionTemps = BUILDER
-            .comment("Override their respective offset values",
-                "Also override ALL biome temperatures")
-            .defineList("Dimension Temperatures", Arrays.asList(
+            .comment("Overrides existing dimension temperatures & offsets",
+                     "Also overrides temperatures of all biomes in the dimension")
+            .defineList("Dimension Temperatures", List.of(
                     // No default values
             ), it -> it instanceof List && ((List<?>) it).get(0) instanceof String && ((List<?>) it).get(1) instanceof Number);
-        BUILDER.pop();
 
         BUILDER.pop();
 
         /*
          Biomes
          */
-        BUILDER.comment("Notation: [[\"biome1\", \"temperature1\"], [\"biome2\", \"temperature2\"]... etc]",
-            "Note: all temperatures are in Minecraft units")
-        .push("Biomes");
+        BUILDER.comment("Format: [[\"biome-1\", temperature-1], [\"biome-2\", temperature-2]... etc]",
+                        "Note: all temperatures are in Minecraft units")
+               .push("Biomes");
 
-        BUILDER.push("BiomeTemperatureOffsets");
         biomeOffsets = BUILDER
+            .comment("Applies an offset to the temperature of a biome")
             .defineList("Biome Temperature Offsets", List.of(
                     List.of("minecraft:soul_sand_valley", -0.5),
 
-                    List.of("minecraft:plains", 0.3),
+                    List.of("minecraft:plains", 0.5),
+                    List.of("minecraft:forest", 0.3),
 
                     List.of("minecraft:bamboo_jungle", 0.5),
                     List.of("minecraft:jungle", 0.5),
@@ -76,9 +80,9 @@ public class WorldSettingsConfig
                     List.of("minecraft:giant_spruce_taiga", 0.2),
                     List.of("minecraft:giant_spruce_taiga_hills", 0.2),
 
-                    List.of("minecraft:savanna", 0.0),
-                    List.of("minecraft:savanna_plateau", 0.0),
-                    List.of("minecraft:windswept_savanna", 0.0),
+                    List.of("minecraft:savanna", -0.2),
+                    List.of("minecraft:savanna_plateau", -0.2),
+                    List.of("minecraft:windswept_savanna", -0.2),
 
                     List.of("minecraft:taiga", 0.2),
                     List.of("minecraft:old_growth_pine_taiga", 0.2),
@@ -86,15 +90,52 @@ public class WorldSettingsConfig
                     List.of("minecraft:snowy_taiga", 0.2),
                     List.of("minecraft:snowy_slopes", 0.2)
             ), it -> it instanceof List && ((List<?>) it).get(0) instanceof String && ((List<?>) it).get(1) instanceof Number);
-        BUILDER.pop();
 
-        BUILDER.push("BiomeTemperatures");
         biomeTemps = BUILDER
-            .comment("Temperatures for individual biomes")
-            .defineList("Biome Temperatures", Arrays.asList(
+            .comment("Overrides existing biome temperatures & offsets")
+            .defineList("Biome Temperatures", List.of(
                     // No default values
             ), it -> it instanceof List && ((List<?>) it).get(0) instanceof String && ((List<?>) it).get(1) instanceof Number);
+
         BUILDER.pop();
+
+        /* Serene Seasons config */
+        if (ModList.get().isLoaded("sereneseasons"))
+        {
+            BUILDER.comment("Format: [season-start, season-mid, season-end]",
+                            "Applied as an offset to the world's temperature")
+                   .push("Season Temperatures");
+
+            summerTemps = BUILDER
+                    .defineList("Summer", Arrays.asList(
+                            0.4, 0.6, 0.4
+                    ), it -> it instanceof List && ((List<?>) it).get(0) instanceof Number
+                                                && ((List<?>) it).get(1) instanceof Number
+                                                && ((List<?>) it).get(2) instanceof Number);
+
+            autumnTemps = BUILDER
+                    .defineList("Autumn", Arrays.asList(
+                            0.2, 0, -0.2
+                    ), it -> it instanceof List && ((List<?>) it).get(0) instanceof Number
+                                                && ((List<?>) it).get(1) instanceof Number
+                                                && ((List<?>) it).get(2) instanceof Number);
+
+            winterTemps = BUILDER
+                    .defineList("Winter", Arrays.asList(
+                            -0.4, -0.6, -0.4
+                    ), it -> it instanceof List && ((List<?>) it).get(0) instanceof Number
+                                                && ((List<?>) it).get(1) instanceof Number
+                                                && ((List<?>) it).get(2) instanceof Number);
+
+            springTemps = BUILDER
+                    .defineList("Spring", Arrays.asList(
+                            -0.2, 0, 0.2
+                    ), it -> it instanceof List && ((List<?>) it).get(0) instanceof Number
+                            && ((List<?>) it).get(1) instanceof Number
+                            && ((List<?>) it).get(2) instanceof Number);
+
+            BUILDER.pop();
+        }
 
         SPEC = BUILDER.build();
     }
@@ -114,7 +155,7 @@ public class WorldSettingsConfig
             // Do nothing
         }
 
-        ModLoadingContext.get().registerConfig(ModConfig.Type.COMMON, SPEC, "coldsweat/world_temperatures.toml");
+        ModLoadingContext.get().registerConfig(ModConfig.Type.COMMON, SPEC, "coldsweat/world_settings.toml");
     }
 
     public static WorldSettingsConfig getInstance()
@@ -143,12 +184,21 @@ public class WorldSettingsConfig
         return dimensionTemps.get();
     }
 
-    public void copyValues(WorldSettingsConfig config)
+    public Double[] summerTemps()
     {
-        setBiomeOffsets(config.biomeOffsets());
-        setBiomeTemperatures(config.biomeTemperatures());
-        setDimensionOffsets(config.dimensionOffsets());
-        setDimensionTemperatures(config.dimensionOffsets());
+        return summerTemps.get().stream().map(Number::doubleValue).toArray(Double[]::new);
+    }
+    public Double[] autumnTemps()
+    {
+        return autumnTemps.get().stream().map(Number::doubleValue).toArray(Double[]::new);
+    }
+    public Double[] winterTemps()
+    {
+        return winterTemps.get().stream().map(Number::doubleValue).toArray(Double[]::new);
+    }
+    public Double[] springTemps()
+    {
+        return springTemps.get().stream().map(Number::doubleValue).toArray(Double[]::new);
     }
 
     public void setBiomeOffsets(List<? extends List<?>> list) {
